--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,12 @@ spring.datasource.driver-class-name=org.h2.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.zxj.community.mapper
 mybatis.mapper-locations=classpath:mapper/*.xml
-debug=false
+logging.file.name=log/community.log
+logging.level.root=info
+logging.level.com.zxj.community.mapper=debug
+logging.file.max-size=100MB
+logging.file.max-history=7
+#当迁移时发现目标schema非空，而且带有没有元数据的表时，是否自动执行基准迁移，默认false.
 spring.flyway.baselineOnMigrate=true
 
 
